--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fshare
 description: A simple file sharing command line app
 version: 0.0.1
-# homepage: https://www.example.com
+repository: https://github.com/HosamHasanRamadan/fshare
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
