--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fshare
 description: A simple file sharing command line app
-version: 0.0.3
+version: 0.0.3+1
 repository: https://github.com/HosamHasanRamadan/fshare
 
 environment:
@@ -17,4 +17,3 @@ dev_dependencies:
 
 executables:
   fshare:
-# QrInputTooLongException
